hphp/test/slow/enum_class/enum_class02.php.expectf
Fatal error: Expected constant expression for initializer in %s/enum_class02.php on line 10
